dfir_rs/tests/compile-fail-stable/surface_demux_badclosure.rs
../compile-fail/surface_demux_badclosure.rs